# console-inquirer

./: README.en.md  README.md  README.zh.md  pyproject.toml
changelog/: README.md  v1.0.0.en.md  v1.0.0.md
src/: __init__.py
src/prompts/: checkbox.py  confirm.py  input.py  password.py  select.py  text.py
